# deciduous

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MULTI_USER_SYNC.md  Makefile  README.md  ROADMAP.md  _config.yml  flake.nix  graph-data.json  index.html
.claude/: agents.toml
.claude/commands/: build-test.md  context.md  decision.md  import-session.md  sync-graph.md
.claude/skills/decision-logger/: SKILL.md
.deciduous/patches/: maintenance-functional-core-tea-refactor.json
.github/workflows/: pr-preview.yml  release.yml  type-check.yml
.opencode/command/: build-test.md  context.md  decision.md  recover.md  serve-ui.md  sync-graph.md
.windsurf/rules/: context.md  deciduous.md  recover.md
bindings/: DecisionNode.ts
demo/: git-history.json  index.html
demo/assets/: index-GTek8ZsE.js
docs/: GIT-GUARD-PLAN.md  NODE-METADATA-ANALYSIS.md  analyzer.html  decision-graph-feature-graph-search.dot  decision-graph-metadata-analysis.dot  decision-graph-node-metadata-attachments.dot  decision-graph-node-metadata-keyval.dot  decision-graph-url-state.dot  decision-modal.js  git-history.json  graph-data.json  index.html  index.md  spelunk.html  story.html
docs/demo/: git-history.json  graph-data.json  index.html
docs/demo/assets/: index-CHujfX-c.js  index-CwolZ4cT.js  index-aeKhd4mZ.css
docs/research/: index.html  mem0-analysis.html  mem0-analysis.md
docs/roadmap/: roadmap-data.json
docs/src/types/: graph.ts
docs/src/types/__tests__/: graph.test.ts
docs/tutorial/: index.html  style.css
docs/tutorial/hello-world/: ai-integration.html  connecting.html  first-nodes.html  index.html  initializing.html  installing.html  viewing.html
docs/tutorial/introduction/: what-is-deciduous.html
docs/tutorial/sharing/: patches.html  pr-workflow.html
docs/tutorial/viewing/: index.html  tui.html  web.html
docs/tutorial/workflows/: pr-documentation.html  session-recovery.html
pr-preview/pr-23/demo/: git-history.json  graph-data.json
pr-preview/pr-23/roadmap/: index.html
pr-preview/pr-24/: git-history.json  graph-data.json
pr-preview/pr-24/demo/: git-history.json  graph-data.json
pr-preview/pr-24/tutorial/hello-world/: ai-integration.html
pr-preview/pr-24/tutorial/introduction/: how-to-read.html  what-is-deciduous.html
pr-preview/pr-24/tutorial/sharing/: index.html
pr-preview/pr-24/tutorial/workflows/: index.html
scripts/: build-demo.sh  install-hooks.sh  pre-publish.sh  validate-types.sh
src/: config.rs  db.rs  diff.rs  export.rs  github.rs  import.rs  init.rs  interceptor.rs  lib.rs  main.rs  pages_viewer.html  roadmap.rs  schema.rs  serve.rs  ui.html  viewer.html
src/report/: html.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  msg.rs  state.rs  types.rs  ui.rs  update.rs
src/tui/views/: dag.rs  detail.rs  mod.rs  roadmap.rs  timeline.rs  trace.rs
src/tui/widgets/: file_picker.rs  mod.rs
tests/: cli_integration.rs  ts_gen.rs
trace-interceptor/: package-lock.json  package.json
trace-interceptor/src/: deciduous.ts  index.ts  interceptor-loader.ts  stream-parser.ts  types.ts
tutorial/: style.css
tutorial/advanced/: index.html
tutorial/hello-world/: first-nodes.html  initializing.html
tutorial/reference/: index.html
tutorial/sharing/: multi-user.html
tutorial/viewing/: cli.html
tutorial/workflows/: claude-code.html  index.html  session-recovery.html
wasm-analyzer/src/: lib.rs
web/: index.html  package-lock.json  vite.config.ts
web/dist-embed/: index.html
web/docs/: PLAN-graph-explorer-search.md  git-history.json  graph-data.json
web/src/: App.tsx  index.css
web/src/components/: CalloutLines.tsx  DetailPanel.tsx  Layout.tsx  MiniMap.tsx  NodeBadge.tsx  SearchBar.tsx  SearchResultsPanel.tsx  TypeFilters.tsx
web/src/hooks/: useFocusMode.ts  useGraphData.ts  useNodeVisibility.ts  useUrlState.ts
web/src/types/: graph.ts  trace.ts
web/src/utils/: graphProcessing.ts
web/src/views/: ChainsView.tsx  DagView.tsx  GraphView.tsx  RoadmapView.tsx  StoryView.tsx  TimelineView.tsx  TraceView.tsx
