[package]
name = "deciduous"
version = "0.3.1"
edition = "2021"
rust-version = "1.70"
authors = ["Trey Anastasio <trey@example.com>"]
description = "Decision graph tooling for AI-assisted development. Track every goal, decision, and outcome. Survive context loss. Query your reasoning."
license = "MIT"
repository = "https://github.com/notactuallytreyanastasio/deciduous"
homepage = "https://notactuallytreyanastasio.github.io/deciduous/"
documentation = "https://docs.rs/deciduous"
readme = "README.md"
keywords = ["decision-graph", "ai-development", "context-management", "claude", "llm"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    # Web viewer - not needed for cargo install
    "web/**",
    # Documentation site - hosted separately
    "docs/**",
    # Example files - large demo files
    "examples/**",
    # Database files
    "*.db",
    ".deciduous/**",
    # Large image files
    "*.png",
    # AppImage packaging
    "appimage/**",
]

[[bin]]
name = "deciduous"
path = "src/main.rs"

[lib]
name = "deciduous"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server for graph viewer
tiny_http = "0.12"
serde_urlencoded = "0.7"

# Date/time
chrono = "0.4"

# SQLite ORM with migrations
diesel = { version = "2.2", features = ["sqlite", "r2d2", "64-column-tables"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Colored terminal output
colored = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
